fix css layout overlapping on top of the page

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ body {
     "Helvetica Neue",
     sans-serif;
   background-color: #2c2c2c;
+  min-height: 100vh;
 }
 
 .main-container {
@@ -30,8 +31,9 @@ body {
 }
 
 .content-container {
-  border: 2px solid green;
+  border: 2px solid deepskyblue;
   padding: 10px;
+  margin-top: 20px;
 }
 
 .chart-container {
@@ -63,7 +65,7 @@ body {
 
 .form-container {
   padding: 10px;
-  margin-bottom: 20px;
+  margin: 20px 0;
   display: flex;
   background-color: #f7f7f7;
   border-radius: 20px;
@@ -121,6 +123,7 @@ select {
   width: 100%;
   padding: 10px;
   border: 2px solid green;
+  margin-bottom: 20px;
 }
 
 table {
